# crunchyroll-cc-exporter

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: sample.redacted.vtt.txt  summary.sample.json
src/crunchyroll_cc_exporter/: __init__.py  cli.py  convert.py  crunchyroll.py  models.py
tests/: test_convert.py
